--- a/jgsu-spring-petclinic-main/src/main/resources/application.properties
+++ b/jgsu-spring-petclinic-main/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#Testing git fetch
+#Hello world
+
+
 # database init, supports mysql too
 database=h2
 spring.datasource.schema=classpath*:db/${database}/schema.sql
